packages/tree-sitter-jsdn/test/corpus/main.txt
================================================================================
Arrays
================================================================================

[
    345,
    10.1,
    10,
    -10,
    null,
    true,
    false,
    { "stuff": "good" }
]

--------------------------------------------------------------------------------

(document
  (array
    (number)
    (number)
    (number)
    (number)
    (null)
    (true)
    (false)
    (object
      (pair
        (string
          (string_fragment))
        (string
          (string_fragment))))))

================================================================================
String content
================================================================================

[
  "",
  "abc",
  "def\n",
  "ghi\t",
  "jkl\f",
  "//",
  "/**/"
]

--------------------------------------------------------------------------------

(document
  (array
    (string)
    (string
      (string_fragment))
    (string
      (string_fragment)
      (escape_sequence))
    (string
      (string_fragment)
      (escape_sequence))
    (string
      (string_fragment)
      (escape_sequence))
    (string
      (string_fragment))
    (string
      (string_fragment))))

================================================================================
Top-level numbers
================================================================================

-1

--------------------------------------------------------------------------------

(document
  (number))

================================================================================
Comments
================================================================================

{
  "a": 1,

  // we allow comments, because several
  // commonly used tools allow comments in
  // files with the extension `.json`
  "b": "2",

  /*
   * Block comments are also ok
   */
  "c": 3
}

--------------------------------------------------------------------------------

(document
  (object
    (pair
      (string
        (string_fragment))
      (number))
    (comment)
    (comment)
    (comment)
    (pair
      (string
        (string_fragment))
      (string
        (string_fragment)))
    (comment)
    (pair
      (string
        (string_fragment))
      (number))))

================================================================================
Multiple top-level objects
================================================================================

{}
{}

--------------------------------------------------------------------------------

(document
  (object)
  (object))

================================================================================
Numbers
================================================================================

04000
400
100n
0xffffffffn
0b00111n
0o1234n
0xa_b_c
0o1_1
0b1_000_000
1_2_3
12_3.4_5e6_7
.4_5e6_7
0b1_000_000n
01
00000123

--------------------------------------------------------------------------------

(document
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number)
  (number))

================================================================================
Booleans
================================================================================

null
undefined
true
false

--------------------------------------------------------------------------------

(document
  (null)
  (undefined)
  (true)
  (false))

================================================================================
Unicode identifiers
================================================================================

{ 県: '大阪府', '': '' }

--------------------------------------------------------------------------------

(document
  (object
    (pair (identifier) (string (string_fragment)))
    (pair (string) (string))))

================================================================================
Strings containing comment-like content
================================================================================

"//ok\n//what"

--------------------------------------------------------------------------------

(document
  (string (string_fragment) (escape_sequence) (string_fragment)))

================================================================================
Quote escaping
================================================================================

""
''
"\""
"a\"b"
'\''
'a\'b'
"it's a tiny tiny world"
'"hello"'

--------------------------------------------------------------------------------

(document
  (string)
  (string)
  (string (escape_sequence))
  (string (string_fragment) (escape_sequence) (string_fragment))
  (string (escape_sequence))
  (string (string_fragment) (escape_sequence) (string_fragment))
  (string (string_fragment))
  (string (string_fragment)))

================================================================================
Line continuations
================================================================================

"hello\
world"

'hello\
world'

--------------------------------------------------------------------------------

(document
  (string (string_fragment) (escape_sequence) (string_fragment))
  (string (string_fragment) (escape_sequence) (string_fragment)))
